--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/cookie-parser": "^1.4.3",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "helmet": "^5.0.2",
     "mysql": "^2.18.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
@@ -43,6 +47,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.1",
     "@types/node": "^17.0.32",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
