--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-socket.io": "^8.4.5",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.5",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "helmet": "^5.0.2",
