--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.8",
+    "@nestjs/axios": "0.0.8",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
@@ -37,6 +37,7 @@
     "dotenv": "^16.0.1",
     "helmet": "^5.0.2",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
