--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@nestjs/axios": "^0.0.8",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^8.4.4",
-    "@nestjs/core": "^8.4.4",
+    "@nestjs/core": "^7.5.5",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.4",
-    "@nestjs/platform-socket.io": "^8.4.5",
-    "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.4.5",
+    "@nestjs/platform-express": "^7.5.5",
+    "@nestjs/platform-socket.io": "^7.6.18",
+    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.18",
     "@types/cookie-parser": "^1.4.3",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -41,12 +41,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
     "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.4",
+    "@nestjs/testing": "^7.5.5",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.1",
     "@types/node": "^17.0.32",
