--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^17.0.32",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
