--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
     "mysql": "^2.18.1",
+    "nest-winston": "^1.6.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "typeorm": "^0.3.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.6",
