--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   "dependencies": {
     "@nestjs/axios": "0.0.8",
     "@nestjs/class-transformer": "^0.4.0",
-    "@nestjs/common": "^8.4.6",
-    "@nestjs/core": "^7.5.5",
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
     "@nestjs/jwt": "^8.0.1",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^7.5.5",
-    "@nestjs/platform-socket.io": "^7.6.18",
-    "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.18",
+    "@nestjs/passport": "^8.2.2",
+    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/platform-socket.io": "^8.4.7",
+    "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/websockets": "^8.4.7",
     "@types/cookie-parser": "^1.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -44,6 +44,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
+    "socket.io": "^4.5.1",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
@@ -51,29 +52,29 @@
   "devDependencies": {
     "@nestjs/cli": "^8.2.6",
     "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^7.5.5",
+    "@nestjs/testing": "^8.4.7",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.1",
-    "@types/node": "^17.0.40",
+    "@types/jest": "28.1.3",
+    "@types/node": "^18.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.0",
-    "prettier": "^2.6.2",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.3",
-    "ts-jest": "^28.0.4",
+    "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.3",
+    "typescript": "^4.7.4",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.10.0"
   },
   "jest": {
     "moduleFileExtensions": [
