--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
     "mysql": "^2.18.1",
