--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
     "@types/cookie-parser": "^1.4.3",
+    "@types/csurf": "^1.11.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "helmet": "^5.1.0",
