--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^8.4.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
+    "bsm-oauth": "^1.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
