--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
